--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,18 @@
             android:label="@string/title_activity_trigger"
             android:theme="@style/AppTheme.NoActionBar">
 
+        </activity>
+        <activity android:name=".CreateActivity">
+        </activity>
+        <activity android:name=".SavedActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".DetailsActivity">
+
         </activity>
     </application>
 
