--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.SEND_SMS"/>
-    <uses-permission android:name="android.permission.CALL_PHONE" android:required="true"/>
+    <uses-permission
+        android:name="android.permission.CALL_PHONE"
+        android:required="true"/>
 
     <application
         android:allowBackup="true"
@@ -29,10 +31,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".CreateActivity">
-
         </activity>
         <activity android:name=".SavedActivity">
-
         </activity>
         <activity android:name=".DetailsActivity">
         </activity>
@@ -51,7 +51,6 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps">
-
         </activity>
     </application>
 
