--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,11 +7,30 @@
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the 'MyLocation' functionality. 
     -->
+
+    <permission
+        android:name="com.example.danielbedich.trigger.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature"/>
+
+    <uses-permission android:name="com.example.danielbedich.trigger.permission.MAPS_RECEIVE"/>
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.SEND_SMS"/>
     <uses-permission
         android:name="android.permission.CALL_PHONE"
+        android:required="true"/>
+
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
         android:required="true"/>
 
     <application
@@ -31,8 +50,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".CreateActivity">
+
         </activity>
         <activity android:name=".SavedActivity">
+
         </activity>
         <activity android:name=".DetailsActivity">
         </activity>
@@ -46,12 +67,14 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key"/>
+            android:value="AIzaSyDsK5yz4-vcjofFFv2oe8YlAsWEdG80opA"/>
 
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps">
-        </activity>
+
+
+         </activity>
     </application>
 
 </manifest>
