--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,8 @@
         </activity>
         <activity android:name=".DetailsActivity">
         </activity>
+        <receiver android:name=".TriggerExecution">
+        </receiver>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
