--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
         android:protectionLevel="signature"/>
 
     <uses-permission android:name="com.example.danielbedich.trigger.permission.MAPS_RECEIVE"/>
-
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
@@ -33,6 +32,10 @@
         android:glEsVersion="0x00020000"
         android:required="true"/>
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.READ_PROFILE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -43,25 +46,15 @@
             android:name=".TriggerActivity"
             android:label="@string/title_activity_trigger"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-
         </activity>
         <activity android:name=".CreateActivity">
-
         </activity>
         <activity android:name=".SavedActivity">
-
         </activity>
         <activity android:name=".DetailsActivity">
-
         </activity>
 
         <receiver android:name=".TriggerExecution">
-
         </receiver>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -78,7 +71,18 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps">
-         </activity>
+        </activity>
+        <activity android:name=".PasswordActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+        <activity android:name=".NewPassActivity">
+        </activity>
+        <activity android:name=".ChangePasswordActivity">
+        </activity>
     </application>
 
 </manifest>
